moving to new snapshot versions of cluster, balancer, parent and jain sip ha and refactoring so that the version update is done in parent pom now
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@9470 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -107,7 +107,7 @@
 		<dependency>			
 			<groupId>org.mobicents.ha.javax.sip</groupId>
 			<artifactId>mobicents-jain-sip-ha-core</artifactId>
-			<version>0.4-SNAPSHOT</version>	
+			<version>${mobicents.jain.sip.ha.version}</version>	
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
