--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -136,21 +136,21 @@
 		<dependency>
 			<groupId>org.mobicents.cluster</groupId>
 			<artifactId>core</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>${mobicents.cluster.version}</version>
 			<scope>provided</scope>
 		</dependency>	
 		
 		<dependency>
 			<groupId>org.mobicents.cluster</groupId>
 			<artifactId>cache</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>${mobicents.cluster.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.cluster</groupId>
 			<artifactId>timers</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>${mobicents.cluster.version}</version>
 			<scope>provided</scope>
 		</dependency>
 						
@@ -205,32 +205,32 @@
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-ha-core</artifactId>
-					<version>0.4-SNAPSHOT</version>
+					<version>${mobicents.jain.sip.ha.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-jboss5</artifactId>
-					<version>0.4-SNAPSHOT</version>
+					<version>${mobicents.jain.sip.ha.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>timers</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>				
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>core</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>cache</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.tools</groupId>
 					<artifactId>sip-balancer</artifactId>
-					<version>1.0.BETA10-SNAPSHOT</version>
+					<version>${mobicents.balancer.version}</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>				
@@ -281,32 +281,32 @@
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-ha-core</artifactId>
-					<version>0.4-SNAPSHOT</version>
+					<version>${mobicents.jain.sip.ha.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-jboss5</artifactId>
-					<version>0.4-SNAPSHOT</version>
+					<version>${mobicents.jain.sip.ha.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>timers</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>				
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>core</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>cache</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.tools</groupId>
 					<artifactId>sip-balancer</artifactId>
-					<version>1.0.BETA10-SNAPSHOT</version>
+					<version>${mobicents.balancer.version}</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>						
@@ -338,32 +338,32 @@
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-ha-core</artifactId>
-					<version>0.4-SNAPSHOT</version>
+					<version>${mobicents.jain.sip.ha.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-jboss5</artifactId>
-					<version>0.4-SNAPSHOT</version>
+					<version>${mobicents.jain.sip.ha.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>timers</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>				
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>core</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>cache</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.tools</groupId>
 					<artifactId>sip-balancer</artifactId>
-					<version>1.0.BETA10-SNAPSHOT</version>
+					<version>${mobicents.balancer.version}</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>						
@@ -395,32 +395,32 @@
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-ha-core</artifactId>
-					<version>0.4-SNAPSHOT</version>
+					<version>${mobicents.jain.sip.ha.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.ha.javax.sip</groupId>
 					<artifactId>mobicents-jain-sip-jboss5</artifactId>
-					<version>0.4-SNAPSHOT</version>
+					<version>${mobicents.jain.sip.ha.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>timers</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>				
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>core</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.cluster</groupId>
 					<artifactId>cache</artifactId>										
-					<version>1.2-SNAPSHOT</version>
+					<version>${mobicents.cluster.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.mobicents.tools</groupId>
 					<artifactId>sip-balancer</artifactId>
-					<version>1.0.BETA10-SNAPSHOT</version>
+					<version>${mobicents.balancer.version}</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>				
