--- a/sip-servlets-test-suite/testsuite/pom.xml
+++ b/sip-servlets-test-suite/testsuite/pom.xml
@@ -147,19 +147,19 @@
 		<dependency>
 			<groupId>org.mobicents.tools</groupId>
 			<artifactId>sip-balancer</artifactId>
-			<version>1.0.BETA10-SNAPSHOT</version>
+			<version>${mobicents.balancer.version}</version>
 		</dependency>
 		
 		<dependency>			
 			<groupId>org.mobicents.ha.javax.sip</groupId>
 			<artifactId>mobicents-jain-sip-ha-core</artifactId>
-			<version>0.4-SNAPSHOT</version>				
+			<version>${mobicents.jain.sip.ha.version}</version>				
 		</dependency>
 		
 		<dependency>			
 			<groupId>org.mobicents.ha.javax.sip</groupId>
 			<artifactId>mobicents-jain-sip-jboss4</artifactId>
-			<version>0.4-SNAPSHOT</version>				
+			<version>${mobicents.jain.sip.ha.version}</version>				
 		</dependency>
 		
 		<!-- clustering deps -->
