--- a/sip-servlets-tomcat-jboss4/.classpath
+++ b/sip-servlets-tomcat-jboss4/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="lib" path="lib/jbossweb-service-4.2.3.GA.jar" sourcepath="/home/deruelle/workspaces/jboss-as-4.2.3/JBoss_4_2_3_GA/tomcat/src/main"/>
+	<classpathentry kind="lib" path="lib/jbossweb-service-4.2.3.GA.jar"/>
 	<classpathentry kind="var" path="M2_REPO/bsh/bsh/1.3.0/bsh-1.3.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="var" path="M2_REPO/geronimo-spec/geronimo-spec-j2ee-jacc/1.0-rc4/geronimo-spec-j2ee-jacc-1.0-rc4.jar"/>
