--- a/sip-servlets-jboss5/.classpath
+++ b/sip-servlets-jboss5/.classpath
@@ -171,5 +171,6 @@
 	<classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/cache/1.3-SNAPSHOT/cache-1.3-SNAPSHOT.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/timers/1.3-SNAPSHOT/timers-1.3-SNAPSHOT.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-jboss5-ha-server-cache"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-jruby"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
