--- a/sip-servlets-tomcat-jboss4/pom.xml
+++ b/sip-servlets-tomcat-jboss4/pom.xml
@@ -50,6 +50,13 @@
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-jruby</artifactId>
+			<version>1.2-SNAPSHOT</version>	
+			<scope>provided</scope>		
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-client</artifactId>
 			<version>1.2-SNAPSHOT</version>			
 		</dependency>
