--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -153,6 +153,12 @@
 			<property name="jboss.home" value="${jboss-5.home}"/>
 			<property name="jboss.config" value="default"/>
 		</ant>
+		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/../../sip-servlets-examples/diameter-event-charging">
+			<arg line="clean install -U -P set-svn-revision" />
+		</exec>		
+		<copy tofile="${jboss-5.home}/server/default/deploy/diameter-event-charging.war">
+			<fileset dir="${base.path}/../../sip-servlets-examples/diameter-event-charging/target/" includes="diameter-event-charging-*.war" />
+		</copy>
 		<!-- include MMS 2.X -->
 		<antcall target="extract-mms"/>
 		<!-- include JSR309 media example -->
@@ -161,12 +167,7 @@
 		</exec>
 		<copy tofile="${jboss-5.home}/server/default/deploy/media-jsr309-servlet.war">
 			<fileset dir="${base.path}/../../sip-servlets-examples/media-jsr309-servlet/target/" includes="media-jsr309-servlet.war" />
-		</copy>
-		<!-- Commented out because Diameter don't run on JB5 yet -->
-		<!--ant dir="${base.path}" antfile="build.xml" target="build-mobicents-diameter">
-			<property name="jboss.home" value="${jboss.home}"/>
-			<property name="jboss.config" value="@{jboss.config}"/>
-		</ant-->
+		</copy>		
 		<copy file="JBOSS-SIP-SERVLETS-README.txt" todir="${jboss-5.home}" />
 		<antcall target="build-mobicents-sip-load-balancer">
 			<param name="jboss.home" value="${jboss-5.home}"/>
@@ -535,11 +536,18 @@
 	
 	<target name="make-final-zip-jboss-5" depends="set-time-stamp">
 		<fixcrlf srcdir="${jboss-5.home}/bin" includes="*.sh" eol="lf" eof="remove" />
+		<fixcrlf srcdir="${jboss-5.home}/mobicents-media-server/bin" includes="*.sh" eol="lf" eof="remove" />
 		<zip destfile="${base.path}/mss-${mss.release.version}-jboss-${jboss-5.version}-${time.stamp}.zip" filesonly="false">
 			<zipfileset dir="${jboss-5.home}/bin" filemode="755" prefix="mss-${mss.release.version}-jboss-${jboss-5.version}/bin">
 				<include name="*.sh" />
-			</zipfileset>
+			</zipfileset>			
 			<zipfileset dir="${jboss-5.home}/bin" prefix="mss-${mss.release.version}-jboss-${jboss-5.version}/bin">
+				<exclude name="*.sh" />
+			</zipfileset>
+			<zipfileset dir="${jboss-5.home}/mobicents-media-server/bin" filemode="755" prefix="mss-${mss.release.version}-jboss-${jboss-5.version}/mobicents-media-server/bin">
+				<include name="*.sh" />
+			</zipfileset>
+			<zipfileset dir="${jboss-5.home}/mobicents-media-server/bin" prefix="mss-${mss.release.version}-jboss-${jboss-5.version}/mobicents-media-server/bin">
 				<exclude name="*.sh" />
 			</zipfileset>
 			<zipfileset dir="${jboss-5.home}" prefix="mss-${mss.release.version}-jboss-${jboss-5.version}" excludes="**/bin/** **/server/*/data/** **/server/*/log/** **/server/*/tmp/** **/server/*/work/** **/server/tmp/**"/>
