--- a/sip-servlets-test-suite/.classpath
+++ b/sip-servlets-test-suite/.classpath
@@ -48,6 +48,7 @@
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/coyote/6.0.20/coyote-6.0.20.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/servlet-api/6.0.20/servlet-api-6.0.20.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/jsp-api/6.0.20/jsp-api-6.0.20.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/el-api/6.0.20/el-api-6.0.20.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/jasper/6.0.20/jasper-6.0.20.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/annotations-api/6.0.20/annotations-api-6.0.20.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-application-router"/>
