moving to a global properties for tomcat version
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@9612 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -83,14 +83,14 @@
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>catalina</artifactId>
-			<version>6.0.20</version>
+			<version>${tomcat.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>coyote</artifactId>
-			<version>6.0.20</version>
+			<version>${tomcat.version}</version>
 			<scope>provided</scope>
 		</dependency>									
 		
