--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
 		<mobicents.cluster.version>1.3-SNAPSHOT</mobicents.cluster.version>
 		<mobicents.balancer.version>1.0.BETA12-SNAPSHOT</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>0.6-SNAPSHOT</mobicents.jain.sip.ha.version>
+		<tomcat.version>6.0.20</tomcat.version>
 	</properties>
 	
 	<dependencies>
