tentative fix for hudson failure
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@9629 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -100,6 +100,21 @@
             <scope>provided</scope> <!-- provided by the agent/plugin-container -->
         </dependency>
 
+	<dependency>
+            <groupId>org.rhq</groupId>
+            <artifactId>rhq-core-util</artifactId>
+            <version>${rhq.version}</version>
+            <scope>provided</scope> <!-- provided by the agent/plugin-container -->
+        </dependency>
+
+	<dependency>
+            <groupId>org.rhq</groupId>
+            <artifactId>rhq-plugins-parent</artifactId>
+            <version>${rhq.version}</version>
+	    <type>pom</type>
+            <scope>provided</scope> <!-- provided by the agent/plugin-container -->
+        </dependency>
+
         <dependency>
             <groupId>org.rhq</groupId>
             <artifactId>rhq-jmx-plugin</artifactId>
