removing lb tests in case another instance is already taking the port the build will fail
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@9633 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -390,7 +390,7 @@
 	<target name="build-mobicents-sip-load-balancer" depends="get-deps">
 		<echo>Building Mobicents SIP Load Balancer</echo>
 		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/sip-balancer">
-			<arg line="clean install -P set-svn-revision" />
+			<arg line="clean install -P set-svn-revision -Dmaven.test.skip=true" />
 		</exec>
 		<copy tofile="${jboss.home}/sip-balancer/sip-balancer-jar-with-dependencies.jar">
 			<fileset dir="${base.path}/target/dependencies/sip-balancer/target/" includes="sip-balancer-*-jar-with-dependencies.jar" />
