--- a/sip-servlets-examples/pure-jruby-telco/pom.xml
+++ b/sip-servlets-examples/pure-jruby-telco/pom.xml
@@ -23,13 +23,13 @@
 			<groupId>org.mobicents.external.jsr309
 			</groupId>
 			<artifactId>mscontrol</artifactId>
-			<version>0.3</version>
+			<version>${jsr309.mscontrol.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.jsr309</groupId>
 			<artifactId>mobicents-jsr309-impl</artifactId>
-			<version>2.0.0.BETA2</version>
+			<version>${jsr309.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		
