--- a/jopr-plugin-as-5/pom.xml
+++ b/jopr-plugin-as-5/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
         <artifactId>mobicents</artifactId>
         <groupId>org.mobicents</groupId>
-        <version>1.17-SNAPSHOT</version>
+        <version>1.16</version>
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>jopr-mobicents-sip-servlets-as-5-plugin</artifactId>
