[maven-release-plugin] prepare release release-1.2
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@9785 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/docs/sources-jbcp/pom.xml
+++ b/docs/sources-jbcp/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-docs</artifactId>
-		<version>1.2-SNAPSHOT</version>
+		<version>1.2</version>
 	</parent>
 	
 	<artifactId>sip-servlets-docs-sources-jbcp</artifactId>
@@ -67,10 +67,8 @@
                </goals>
                <configuration>
                  <tasks>
-                   <copy file="mkbk"
-                         todir="src/main/resources/"/>
-			<copy file="Makefile"
-                         todir="src/main/resources/"/>
+                   <copy file="mkbk" todir="src/main/resources/" />
+			<copy file="Makefile" todir="src/main/resources/" />
                  </tasks>
                </configuration>
              </execution>
