--- a/sip-servlets-examples/click-to-call/pom.xml
+++ b/sip-servlets-examples/click-to-call/pom.xml
@@ -3,13 +3,13 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.6-SNAPSHOT</version>
+		<version>1.6</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>click-to-call-servlet</artifactId>
 	<packaging>war</packaging>
-	<version>1.6-SNAPSHOT</version>
+	<version>1.6</version>
 	<name>Click To Call</name>
 	<url>http://www.mobicents.org/click2call.html</url>
 	
