--- a/sip-servlets-examples/jslee-sips-interop/jslee-events/events/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-events/events/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>jslee-sips-interop-demo-jslee-events-parent</artifactId>
-		<version>1.6-SNAPSHOT</version>
+		<version>1.6</version>
 	</parent>
 	
 	<artifactId>jslee-sips-interop-demo-slee-custom-events</artifactId>				
