[maven-release-plugin] prepare for next development iteration
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@9787 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/jopr-plugin-as-5/pom.xml
+++ b/jopr-plugin-as-5/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>jopr-mobicents-sip-servlets-as-5-plugin</artifactId>
-	<version>1.4</version>
+	<version>1.5-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Jopr Mobicents Sip Servlets Plugin For JBoss 5</name>
@@ -236,10 +236,4 @@
  	      	</plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <connection>scm:svn:https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-1.2</connection>
-    <developerConnection>scm:svn:https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-1.2</developerConnection>
-    <url>http://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-1.2</url>
-  </scm>
 </project>
