--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.mobicents.servlet.sip</groupId>
     <artifactId>jopr-mobicents-sip-servlets-plugin</artifactId>
-    <version>1.5</version>
+    <version>1.6-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Jopr Mobicents Sip Servlets Plugin</name>
@@ -174,10 +174,4 @@
             </plugin>            
         </plugins>
     </build>
-
-  <scm>
-    <connection>scm:svn:https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-1.2</connection>
-    <developerConnection>scm:svn:https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-1.2</developerConnection>
-    <url>http://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-1.2</url>
-  </scm>
 </project>
