--- a/sip-servlets-examples/jslee-sips-interop/common/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/common/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>jslee-sips-interop-demo-parent</artifactId>
-		<version>1.6</version>
+		<version>1.7-SNAPSHOT</version>
 	</parent>
 	<artifactId>jslee-sips-interop-commons</artifactId>
 	<packaging>jar</packaging>	
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.12</version>
+			<version>1.1.13-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>	
