--- a/sip-servlets-examples/shopping-demo/business/pom.xml
+++ b/sip-servlets-examples/shopping-demo/business/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>shopping-demo-parent</artifactId>
-		<version>1.6</version>
+		<version>1.7-SNAPSHOT</version>
 	</parent>
 	<artifactId>shopping-demo-business</artifactId>
 	<packaging>jar</packaging>
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.12</version>
+			<version>1.1.13-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- test dependencies -->
