--- a/sip-servlets-spec/pom.xml
+++ b/sip-servlets-spec/pom.xml
@@ -3,12 +3,12 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>1.2</version>
+		<version>1.3-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-spec</artifactId>
-	<version>1.1.12</version>
+	<version>1.1.13-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Sip Servlets Specification Implementation</name>
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
