--- a/sip-servlets-tomcat-jboss4/pom.xml
+++ b/sip-servlets-tomcat-jboss4/pom.xml
@@ -3,12 +3,12 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>1.2</version>
+		<version>1.3-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-tomcat-jboss4</artifactId>
-	<version>1.2</version>
+	<version>1.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Sip Servlets Loading Specifics for Tomcat and JBoss 4.2.x</name>
 	<url>http://www.mobicents.org/products_sip_servlets.html</url>
@@ -30,35 +30,35 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-impl</artifactId>
-			<version>1.2</version>
+			<version>1.3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.12</version>
+			<version>1.1.13-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>	
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-annotations</artifactId>
-			<version>1.2</version>
+			<version>1.3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>			
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-jruby</artifactId>
-			<version>1.2</version>	
+			<version>1.3-SNAPSHOT</version>	
 			<scope>provided</scope>		
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-client</artifactId>
-			<version>1.2</version>			
+			<version>1.3-SNAPSHOT</version>			
 		</dependency>
 		
 		<dependency>
