Stopping the release of the JBos 4 version of Mobicents Sip Servlets
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@9867 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -56,7 +56,7 @@
 	
 	<!-- Release target -->
 	
-	<target name="release" depends="clean,release-jboss,release-jboss-5,release-tomcat,make-src-zip,clean" />
+	<target name="release" depends="clean,release-jboss-5,release-tomcat,make-src-zip,clean" />
 	
 	<!-- Tomcat version -->
 	
