--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
         	<artifactId>mobicents</artifactId>
         	<groupId>org.mobicents</groupId>
-        	<version>1.16</version>
+        	<version>1.17-SNAPSHOT</version>
     	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-bootstrap</artifactId>
@@ -84,9 +84,9 @@
 	<properties>
 		<!-- MOBICENTS TOOL VERSIONS -->
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.BETA2</mobicents.tools.mavenplugin.eclipse.version>
-		<mobicents.cluster.version>1.2</mobicents.cluster.version>
-		<mobicents.balancer.version>1.0.BETA13</mobicents.balancer.version>
-		<mobicents.jain.sip.ha.version>0.6</mobicents.jain.sip.ha.version>
+		<mobicents.cluster.version>1.3-SNAPSHOT</mobicents.cluster.version>
+		<mobicents.balancer.version>1.0.BETA14-SNAPSHOT</mobicents.balancer.version>
+		<mobicents.jain.sip.ha.version>0.7-SNAPSHOT</mobicents.jain.sip.ha.version>
 		<tomcat.version>6.0.20</tomcat.version>
 	</properties>
 	
