Update MSS release script for new SIP LB
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@10235 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -389,13 +389,20 @@
 	
 	<target name="build-mobicents-sip-load-balancer" depends="get-deps">
 		<echo>Building Mobicents SIP Load Balancer</echo>
-		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/sip-balancer">
+		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/sip-balancer/jar">
 			<arg line="clean install -P set-svn-revision -Dmaven.test.skip=true" />
 		</exec>
+		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/sip-balancer/docs">
+			<arg line="clean install -P set-svn-revision,maven-release -Dmaven.test.skip=true" />
+		</exec>
 		<copy tofile="${jboss.home}/sip-balancer/sip-balancer-jar-with-dependencies.jar">
-			<fileset dir="${base.path}/target/dependencies/sip-balancer/target/" includes="sip-balancer-*-jar-with-dependencies.jar" />
+			<fileset dir="${base.path}/target/dependencies/sip-balancer/jar/target/" includes="sip-balancer-*-jar-with-dependencies.jar" />
+		<mkdir dir="${jboss.home}/sip-balancer/docs"/>
+		<copy todir="${jboss.home}/sip-balancer/docs">
+			<fileset dir="${base.path}/target/dependencies/sip-balancer/docs/jdocbook-mobicents/target/docbook/publish/en-US" includes="**/*" />
 		</copy>
-		<copy file="${base.path}/target/dependencies/sip-balancer/src/test/resources/lb-configuration.properties"
+		</copy>
+		<copy file="${base.path}/target/dependencies/sip-balancer/jar/src/test/resources/lb-configuration.properties"
 			tofile="${jboss.home}/sip-balancer/lb-configuration.properties" />
 	</target>
 	
