--- a/sip-servlets-jboss5-deployer/pom.xml
+++ b/sip-servlets-jboss5-deployer/pom.xml
@@ -103,7 +103,7 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deployers/jbossweb.deployer/" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deployers/jbossweb.deployer/" />
 									</tasks>
 								</configuration>
 								<goals>
