--- a/sip-servlets-jboss5-ha-server-cache/pom.xml
+++ b/sip-servlets-jboss5-ha-server-cache/pom.xml
@@ -112,7 +112,7 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/common/lib" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/common/lib" />
 									</tasks>
 								</configuration>
 								<goals>
