--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -387,7 +387,7 @@
 		 	            			</goals>
 		 	            			<configuration>
 									<includeArtifactIds>sip-balancer-jar,mobicents-jain-sip-jboss5,core,cache,timers</includeArtifactIds>
-					    			<outputDirectory>${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar</outputDirectory>
+					    			<outputDirectory>${JBOSS_HOME}/server/${node}/deploy/jbossweb.sar</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>		 	          		
 		 	        	</executions>
@@ -441,7 +441,7 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>										
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar/" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deploy/jbossweb.sar/" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -462,7 +462,7 @@
 		 	            			</goals>
 		 	            			<configuration>
 									<includeArtifactIds>sip-balancer-jar,mobicents-jain-sip-jboss5,core,cache,timers</includeArtifactIds>
-					    			<outputDirectory>${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar</outputDirectory>
+					    			<outputDirectory>${JBOSS_HOME}/server/${node}/deploy/jbossweb.sar</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>		 	          		
 		 	        	</executions>
